変換するTSを追加したつもり

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 this is first html
 
 <script src="./index.js"></script>
+
+<textarea id="editor" name="editor"></textarea>
+<input type="button" value="変換" onclick="submit()">
