--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 this is first html
 
-<script src="./index.js"></script>
+<script type="module" src="./index.js"></script>
 
 <textarea id="editor" name="editor"></textarea>
-<input type="button" id="submitButton" value="変換" onclick="submit()">
+<input type="button" id="submitButton" value="変換">
