--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ this is first html
 
 <textarea id="editor" name="editor"></textarea>
 <input type="button" id="submitButton" value="変換">
+<input type="checkbox" id="dict1" name="dictionary" value="replacements1.csv"> 辞書1
+<input type="checkbox" id="dict2" name="dictionary" value="replacements2.csv"> 辞書2
