--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ this is first html
 <input type="button" id="submitButton" value="変換">
 <input type="checkbox" id="dict1" name="dictionary" value="replacements1.csv"> 辞書1
 <input type="checkbox" id="dict2" name="dictionary" value="replacements2.csv"> 辞書2
+<input type="checkbox" id="dict2" name="dictionary" value="011_ikakoro.csv" checked> 生かさず殺さずの絶望と裏切りの祝日
