--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ this is first html
 
 <script type="module" src="./dist/bundle.js"></script>
 
-<textarea id="editor" name="editor"></textarea>
+<textarea id="editor" name="editor" style="width:410px;height:490px;"></textarea>
 <input type="button" id="submitButton" value="変換">
 <input type="checkbox" id="dict1" name="dictionary" value="replacements1.csv"> 辞書1
 <input type="checkbox" id="dict2" name="dictionary" value="replacements2.csv"> 辞書2
