--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ this is first html
 <input type="button" id="submitButton" value="変換">
 <input type="checkbox" id="dict1" name="dictionary" value="replacements1.csv"> 辞書1
 <input type="checkbox" id="dict2" name="dictionary" value="replacements2.csv"> 辞書2
-<input type="checkbox" id="dict2" name="dictionary" value="011_ikakoro.csv" checked> 生かさず殺さずの絶望と裏切りの祝日
+<input type="checkbox" id="dict2" name="dictionary" value="011_ikakoro.csv"> 生かさず殺さずの絶望と裏切りの祝日
+<input type="checkbox" id="dict2" name="dictionary" value="012_ikakoro_ext.csv"> 同拡張
+<input type="checkbox" id="dict2" name="dictionary" value="021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！
