うりくる2追加

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-this is first html
-
 <script type="module" src="./dist/bundle.js"></script>
 
 <textarea id="editor" name="editor" style="width:410px;height:490px;"></textarea>
@@ -8,3 +6,32 @@ this is first html
 <input type="checkbox" id="dict2" name="dictionary" value="012_ikakoro_ext.csv" checked> 同拡張
 <input type="checkbox" id="dict2" name="dictionary" value="021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！
 <input type="checkbox" id="dict2" name="dictionary" value="022_sinteku_ext.csv" checked> 同拡張
+<input type="checkbox" id="dict2" name="dictionary" value="031_urikuru2.csv" checked> ヴリで狂ったそれから遥か未来2
+
+<h3>UMNI翻訳機</h3>
+
+<p>
+    これは、ノムリッシュの偉大な預言者UMNI師の言葉遣いを再現するための翻訳機です。
+    変換ルールのセットである辞書を選択できます。
+    以下の特徴があります。
+    <ul>
+        <li>ランダム性なし</li>
+        <li>原文の原文を(そこから作られた辞書で)翻訳すると、UMNI師による原文になります…といいなあ</li>
+        <li>しかし、原文の原文を原文に変換するルールだけだと、変換対象になる文字列が少なく、他の文章ではUMNI師の言葉遣いにならないため、「拡張」として、変換元の言葉を増強した辞書を用意しました。</li>
+        <li>この翻訳機のコードセットや辞書データは <a href="https://github.com/CataArt/Umni">https://github.com/CataArt/Umni</a> にあります。</li>
+        <li>この翻訳システムを立ち上げる際のヒントを 工事中 に掲載してあるので、自分用の翻訳システムを立ち上げたくなった場合は、参考にできます。</li>
+    </ul>
+</p>
+
+<p>
+    これは世界を救う鍵となる、ノムリッシュの偉大な預言者UMNI師の女神の神託遣いを再現する、そして人類を新たな“段階”へと導くための翻“世界の真実”機です。
+    バーサーク換ルー(…それは人類の罪……)ルの光り輝くセットである…そうだろう、セフィロス…！辞書を選択できます…貴様を殺すためにな！。
+    以下の特徴があります。
+    <ul>
+        <li>ラグナロクンダムファルシなし</li>
+        <li>原文の原文を(そこ、つまり光と闇の両側の世界から作ら闇に飲まれた辞書で)翻訳すると、UMNI師による原文になります…と預言書にありなあ</li>
+        <li>…ここからは俺の仮説だが、原文の原文を原文に変換するルール…結局は金だけだと、変換対象に進化する文字列が少なく、他の女神の神託神が人を滅ぼすというのならばUMNI師の言葉遣いにならないため、「拡張」…だと……して封印されて、変換元の言葉を増強した"それ"には感情など無かった……辞書を用意しま…そう、闇の回廊がひとりでに開いた。</li>
+        <li>叙事詩にある翻訳機のコードセットや辞書データは <a href="https://github.com/CataArt/Umni">https://github.com/CataArt/Umni</a> にあります。</li>
+        <li>この翻訳シスの闇に囚われたテムを立ち天げる際のヒントを 工魔法奥底 に掲載してあるから――光と共に歩む者は、内なる闇との闘いを避けることはできない――、この物語の主人公用の翻訳システムを立ち天げたくなった"それ"には感情など無かった……場合は、参考にできます。</li>
+    </ul>
+</p>
