index.tsとtranslate.tsをリファクタした

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <script type="module" src="./dist/bundle.js"></script>
 
 <textarea id="editor" name="editor" style="width:410px;height:490px;"></textarea>
-<input type="button" id="submitButton" value="変換">
+<input type="button" id="translateButton" value="変換">
 <input type="checkbox" id="dict2" name="dictionary" value="011_ikakoro.csv" checked> 生かさず殺さずの絶望と裏切りの祝日
 <input type="checkbox" id="dict2" name="dictionary" value="012_ikakoro_ext.csv" checked> 同拡張
 <input type="checkbox" id="dict2" name="dictionary" value="021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！
 <input type="checkbox" id="dict2" name="dictionary" value="022_sinteku_ext.csv" checked> 同拡張
-<input type="checkbox" id="dict2" name="dictionary" value="031_urikuru2.csv" checked> ヴリで狂ったそれから遥か未来2
+<input type="checkbox" id="dict2" name="dictionary" value="031_urikuru2.csv"> ヴリで狂ったそれから遥か未来2
 
 <h3>UMNI翻訳機</h3>
 
