--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <input type="checkbox" id="dict2" name="dictionary" value="021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！
 <input type="checkbox" id="dict2" name="dictionary" value="022_sinteku_ext.csv" checked> 同拡張
 <input type="checkbox" id="dict2" name="dictionary" value="031_urikuru2.csv"> ヴリで狂ったそれから遥か未来2
+置換確率(0-100):<input type="text" id="replace_probability" name="replace_probability" value="100">
 
 <h3>UMNI翻訳機</h3>
 
