--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <textarea id="editor" name="editor" style="width:410px;height:490px;"></textarea>
 <input type="button" id="translateButton" value="変換">
-<input type="checkbox" id="dict2" name="dictionary" value="dict/011_ikakoro.csv" checked> 生かさず殺さずの絶望と裏切りの祝日
-<input type="checkbox" id="dict2" name="dictionary" value="dict/012_ikakoro_ext.csv" checked> 同拡張
-<input type="checkbox" id="dict2" name="dictionary" value="dict/021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！
-<input type="checkbox" id="dict2" name="dictionary" value="dict/022_sinteku_ext.csv" checked> 同拡張
-<input type="checkbox" id="dict2" name="dictionary" value="dict/031_urikuru2.csv"> ヴリで狂ったそれから遥か未来2
+<input type="checkbox" id="dict_011" name="dictionary" value="dict/011_ikakoro.csv" checked> 生かさず殺さずの絶望と裏切りの祝日(312)
+<input type="checkbox" id="dict_012" name="dictionary" value="dict/012_ikakoro_ext.csv" checked> 同拡張(877)
+<input type="checkbox" id="dict_021" name="dictionary" value="dict/021_sinteku.csv" checked> 新テク光をもって光を暴き出す締め技開発！(229)
+<input type="checkbox" id="dict_022" name="dictionary" value="dict/022_sinteku_ext.csv" checked> 同拡張(599)
+<input type="checkbox" id="dict_031" name="dictionary" value="dict/031_urikuru2.csv"> ヴリで狂ったそれから遥か未来2(163)
 置換確率(1-100):<input type="text" id="replace_probability" name="replace_probability" value="100">
 
 <h3>UMNI翻訳機</h3>
@@ -16,7 +16,9 @@
     変換ルールのセットである辞書を選択できます。
     以下の特徴があります。
     <ul>
-        <li>ランダム性なし</li>
+        <li>ランダム性なし(置換確率100%の場合)</li>
+        <li>置換確率を変えると、変換辞書に定義された置換元の言葉1つごとに、指定した確率での置換になります。辞書4つ(2000ルール)換算で100%になるように設定するといいでしょう。(例:5つの辞書にチェックをつけたなら、80%を指定する)</li>
+        <li>辞書名の右にある数値は、その辞書に含まれる変換ルールの数です。</li>
         <li>原文の原文を(そこから作られた辞書で)翻訳すると、UMNI師による原文になります…といいなあ</li>
         <li>しかし、原文の原文を原文に変換するルールだけだと、変換対象になる文字列が少なく、他の文章ではUMNI師の言葉遣いにならないため、「拡張」として、変換元の言葉を増強した辞書を用意しました。</li>
         <li>この翻訳機のコードセットや辞書データは <a href="https://github.com/CataArt/Umni">https://github.com/CataArt/Umni</a> にあります。</li>
@@ -30,7 +32,9 @@
     以下の特徴があります。
     <ul>
         <li>ラグナロクンダムファルシなし</li>
-        <li>原文の原文を(そこ、つまり光と闇の両側の世界から作ら闇に飲まれた辞書で)翻訳すると、UMNI師による原文になります…と預言書にありなあ</li>
+        <li>原文の原文を(そこ、つまり光と闇の両側の世界から作られ闇に飲まれた辞書で)翻訳すると、UMNI師による原文になります…と預言書にありなあ</li>
+        <li>置換確率をバーサークえると、変換辞書に定義され闇に飲まれた置換元の女神の神託1つごと…そして、この地上は滅びつつあるのに、魔獣の爪定した"それ"には感情など無かった……確率での置換になります…貴様を殺すためにな！。辞書4つ(ファビュラ・ノヴァ・2000ルー(…それは人類の罪……)ル)換算で完全体に進化するように設定すると預言書にありでしょう。(例:5つの辞書にティェックをつけたなら、80%を指定する)</li>
+        <li>辞書名の右にある数値は、その瞳には、何が映っているのか……辞書に含まれる変換ルールの数です。</li>
         <li>…ここからは俺の仮説だが、原文の原文を原文に変換するルール…結局は金だけだと、変換対象に進化する文字列が少なく、他の女神の神託神が人を滅ぼすというのならばUMNI師の言葉遣いにならないため、「拡張」…だと……して封印されて、変換元の言葉を増強した"それ"には感情など無かった……辞書を用意しま…そう、闇の回廊がひとりでに開いた。</li>
         <li>叙事詩にある翻訳機のコードセットや辞書データは <a href="https://github.com/CataArt/Umni">https://github.com/CataArt/Umni</a> にあります。</li>
         <li>この翻訳シスの闇に囚われたテムを立ち天げる際のヒントを 工魔法奥底 に掲載してあるから――光と共に歩む者は、内なる闇との闘いを避けることはできない――、この物語の主人公用の翻訳システムを立ち天げたくなった"それ"には感情など無かった……場合は、参考にできます。</li>
