--- a/index.html
+++ b/index.html
@@ -40,3 +40,6 @@
         <li>この翻訳シスの闇に囚われたテムを立ち天げる際のヒントを 工魔法奥底 に掲載してあるから――光と共に歩む者は、内なる闇との闘いを避けることはできない――、この物語の主人公用の翻訳システムを立ち天げたくなった"それ"には感情など無かった……場合は、参考にできます。</li>
     </ul>
 </p>
+
+元の文章:
+<textarea id="original_text_area" name="original_text_area" style="width:410px;height:490px;"></textarea>
