--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <input type="checkbox" id="dict_022" name="dictionary" value="dict/022_sinteku_ext.csv" checked> 同拡張(599)
 <input type="checkbox" id="dict_031" name="dictionary" value="dict/031_urikuru2.csv"> ヴリで狂ったそれから遥か未来2(163)
 置換確率(1-100):<input type="text" id="replace_probability" name="replace_probability" value="100">
+<input type="button" id="restoreButton" value="戻す">
 
 <h3>UMNI翻訳機</h3>
 
