開発記事へのリンクを追加

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li>原文の原文を(そこから作られた辞書で)翻訳すると、UMNI師による原文になります…といいなあ</li>
         <li>しかし、原文の原文を原文に変換するルールだけだと、変換対象になる文字列が少なく、他の文章ではUMNI師の言葉遣いにならないため、「拡張」として、変換元の言葉を増強した辞書を用意しました。</li>
         <li>この翻訳機のコードセットや辞書データは <a href="https://github.com/CataArt/Umni">https://github.com/CataArt/Umni</a> にあります。</li>
-        <li>この翻訳システムを立ち上げる際のヒントを 工事中 に掲載してあるので、自分用の翻訳システムを立ち上げたくなった場合は、参考にできます。</li>
+        <li>この翻訳システムの開発時の記事を <a href="https://cataart.livedoor.blog/archives/2513952.html" target="_blank">こちら</a> に掲載してあるので、自分用の翻訳システムを立ち上げたくなった場合は、参考にできます。</li>
     </ul>
 </p>
 
