github actionsのためにテストコミット

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     変換ルールのセットである辞書を選択できます。
     以下の特徴があります。
     <ul>
-        <li>ランダム性なし(置換確率100%の場合)</li>
+        <li>ランダム性なし(置換確率100%の場合)。</li>
         <li>置換確率を変えると、変換辞書に定義された置換元の言葉1つごとに、指定した確率での置換になります。辞書4つ(2000ルール)換算で100%になるように設定するといいでしょう。(例:5つの辞書にチェックをつけたなら、80%を指定する)</li>
         <li>辞書名の右にある数値は、その辞書に含まれる変換ルールの数です。</li>
         <li>原文の原文を(そこから作られた辞書で)翻訳すると、UMNI師による原文になります…といいなあ</li>
